# Kalligraph

./: CMakeLists.txt  LICENSE.md  README.md
Sources/: KGBruteForceTriangulator.cpp  KGBruteForceTriangulator.h  KGCommon.cpp  KGCommon.h  KGMeshGeneratorLoopBlinn.cpp  KGMeshGeneratorLoopBlinn.h  KGTriangulatorBruteForce.cpp  KGTriangulatorBruteForce.h
